garde/tests/ui/compile-fail/unknown_attr.stderr
error: unrecognized attribute
 --> tests/ui/compile-fail/unknown_attr.rs
  |
  | #[garde(unknown_attr)]
  |         ^^^^^^^^^^^^
